--- a/ConfigServer/src/main/resources/application.yaml
+++ b/ConfigServer/src/main/resources/application.yaml
@@ -10,4 +10,17 @@ spring:
         config:
             server:
                 git:
-                    uri: 
+                    uri: https://github.com/haiderrizvi1441/spring-app-config
+                    clone-on-start: true
+
+
+# Eureka Service Registry Configuration 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client: 
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
