--- a/ProductService/src/main/resources/application.yaml
+++ b/ProductService/src/main/resources/application.yaml
@@ -13,14 +13,26 @@ spring:
   jpa: 
     hibernate: 
       ddl-auto: update
+  
+  # Cloud Config Server 
+  config:
+    import: configserver:http://localhost:9296
+
+# Zipkin and Slueth Configuration
+management:
+  tracing:
+    sampling:
+      probability: 1.0
 
 
-# Eureka Client Configuration - to conenct to Eureka Service Application
-eureka:
-  instance:
-    prefer-ip-address: true
-  client: 
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+# # Eureka Client Configuration - to conenct to Eureka Service Application
+# eureka:
+#   instance:
+#     prefer-ip-address: true
+#   client: 
+#     fetch-registry: true
+#     register-with-eureka: true
+#     service-url:
+#       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+# The Above configuration is moved to git by Config Server 
